Align devnet-2 reference with merged PR02 stack